# aiohttp-socks5

./: .gitignore  LICENSE  README.md  pyproject.toml
aiohttp_socks5/: __init__.py  connector.py  socks.py
